...
              styles.term,
              { color: theme.grayTitle, fontSize: largeLayout ? 18 : 16 },
            ]}
            onChangeText={newText => props.handleChangeText(newText)}
            underlineColorAndroid={'transparent'}
            value={props.text}
            testID="search-add-input"
          />
        </View>
        {props.text ? searchCancel : infoIcon}
      </View>
    </View>
  );
...
