...
          importantForAccessibility="yes">
          <TouchableHighlight
            accessible={true}
            accessibilityLabel={siteAddIconA11YLabel}
            style={styles.buttonWrapper}
            underlayColor={theme.background}
            testID="add-site-icon"
            onPress={() =>
              !props.inLocalList &&
              props.handleSiteAdd(props.site.featured_link)
            }
            {...props.sortHandlers}>
            <View
...
