...
            color={theme.buttonTextColor}
            iconStyle="solid"
          />
        </TouchableHighlight>
      )}
      <TouchableHighlight
        testID="site-row-delete"
        style={{
          ...styles.hiddenButton,
          backgroundColor: theme.redDanger,
        }}
        underlayColor={theme.redDanger}
        onPress={props.onDelete}
...
              {_renderShortcuts(showSiteAddress)}
            </View>
          </View>
        </TouchableHighlight>
        {showTopicList && (
          <View
            testID="topic-list"
            style={{
              ...styles.hotBox,
              borderColor: theme.grayBorder,
              borderLeftWidth: largeLayout ? StyleSheet.hairlineWidth : 0,
              marginLeft: largeLayout ? 36 : 18,
            }}
...
